feat: 添加音乐搜索功能，支持网易云、QQ音乐、酷我音乐平台，并引入通用HTTP代理。

--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "http-proxy-middleware": "^3.0.5",
+    "node-cache": "^5.1.2",
     "socket.io": "^4.8.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
-    "@types/http-proxy-middleware": "^1.0.0",
     "@types/node": "^25.0.8",
+    "@types/node-cache": "^4.2.5",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
